[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steerplane"
version = "0.2.0"
description = "Agent Control Plane for Autonomous Systems — Runtime guards, loop detection, cost limits, and telemetry for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "SteerPlane", email = "hello@steerplane.ai"}
]
keywords = ["ai", "agents", "guard", "safety", "monitoring", "telemetry", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://steerplane.ai"
Documentation = "https://docs.steerplane.ai"
Repository = "https://github.com/vijaym2k6/SteerPlane"
Issues = "https://github.com/vijaym2k6/SteerPlane/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["steerplane*"]
exclude = ["tests*"]
